Rename to themesurf

--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,15 @@
 {
-    "name": "surfnet/simplesamlphp-module-themesurfnet",
-    "description": "SURFnet simpleSAMLphp theme",
+    "name": "surfnet/simplesamlphp-module-themesurf",
+    "description": "SURF simpleSAMLphp theme",
     "type": "simplesamlphp-module",
     "license": "LGPL-2.1",
-    "extra": {
-        "ssp-mixedcase-module-name": "themeSURFnet"
-    },
     "require": {
         "simplesamlphp/composer-module-installer": "~1.0"
     },
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/SURFnet/simpleSAMLphp-SURFnet"
+            "url": "https://github.com/SURFnet/simpleSAMLphp-theme-SURF"
         }
     ]  
 }
